--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!--LOGIN/SIGNUP PAGE-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,5 +8,6 @@
   </head>
   <body>
     <h1>Vaccino</h1>
+
   </body>
 </html>
