added login button

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Vaccino</h1>
-    <p>hello testing this crap</p>
+    <button type="button">"Login</button>
   </body>
 </html>
