please just work

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Vaccino</h1>
     <button type="button">"Login</button>
+    <button type="button">Sign Up</button>
   </body>
 </html>
