updated main screen

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
     <title>Vaccino</title>
   </head>
   <body>
-    <h1>Vaccino</h1>
+    <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
+      <h1>Vaccino</h1>
+      <h3>The official New Zealand Government website</br>
+        for vaccine and innoculation information</h3>
+    </div> <!--End of blue header section-->
+    <!--these two buttons go in center of screen-->
     <button type="button">"Login</button>
     <button type="button">Sign Up</button>
   </body>
