added to index html

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-      <h1>Vaccino</h1>
+      <h1>Vaccino</h1> <!--Align center-->
+      <p>Ministry of Health</p> <!--Align left-->
       <h3>The official New Zealand Government website</br>
-        for vaccine and innoculation information</h3>
+        for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <!--these two buttons go in center of screen-->
     <button type="button">"Login</button>
