--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="my-electron-app\style.css">
+    <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
     <meta charset="UTF-8">
     <title>Vaccino</title>
   </head>
@@ -14,7 +14,7 @@
         for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <!--these two buttons go in center of screen-->
-    <button type="button">"Login</button>
+    <button type="button">Login</button>
     <button type="button">Sign Up</button>
   </body>
 </html>
