--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
         for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <!--these two buttons go in center of screen-->
-    <button type="button">Login</button>
-    <button type="button">Sign Up</button>
+    <button type="button" id="loginButton" onclick="window.location.replace('login.html')">Login</button> <!--WE NEED TO ADD A LOGIN POP UP-->
+    <button type="button">Sign Up</button><!--WE NED TO ADD A SIGN UP POP UP-->
     <div id="box"><!--This goes to the left of the buttons-->
       <ul>
-        <li>
+        <li> <!--Goes in a box to the left of the buttons-->
           We have all your vaccine<br> 
           information ready to go.
         </li>
