--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
         for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <!--these two buttons go in center of screen-->
-    <button type="button" id="loginButton" onclick="window.location.replace('login.html')">Login</button> <!--WE NEED TO ADD A LOGIN POP UP-->
-    <button type="button">Sign Up</button><!--WE NED TO ADD A SIGN UP POP UP-->
+    <button type="button" id="loginBtn" onclick="window.location.replace('login.html')">Login</button>
+    <button type="button" id="signUpBtn" onclick="window.location.replace('registration.html')">Sign Up</button>
     <div id="box"><!--This goes to the left of the buttons-->
       <ul>
         <li> <!--Goes in a box to the left of the buttons-->
