--- a/src/testResults.html
+++ b/src/testResults.html
@@ -6,6 +6,13 @@
         <title>Vaccino - Test Results</title>
       </head>
       <body>
-        
+         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
+            <p>Ministry of Health</p> <!--Align left-->
+            <h1>Vaccino</h1> <!--Align center-->
+            <h3>The official New Zealand Government website<br>
+              for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
+              <button type="button" id="signOut">Sign out</button> <!--Goes to the far upper right hand side-->
+          </div> <!--End of blue header section-->
+          
       </body>
 </html>
