--- a/src/userHome.html
+++ b/src/userHome.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
         <meta charset="UTF-8">
-        <title>Vaccino - Test Results</title>
+        <title>Vaccino - Home</title>
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
