--- a/src/userHome.html
+++ b/src/userHome.html
@@ -26,7 +26,7 @@
           <p>current number of<br>
             Covid-19 cases: </p><!--We need to figure out how we want to display the numbers in a way that an admin could change them, using JS perhaps?-->
             <p>Found a bug?</p>
-            <p>Report it here</p><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
+            <p>Report it <a href="bugReport.html">here</a></p><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
           </div>
       </body>
 </html>
