--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Vaccino</title>
   </head>
