--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-      <p>Ministry of Health</p> <!--Align left-->
+      <p>Ministry of
+        <br> Health</p> <!--Align left-->
       <h1>Vaccino</h1> <!--Align center-->
     
       <h3>The official New Zealand Government website<br>
