Working on the css file

--- a/src/registration.html
+++ b/src/registration.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
-        <script type="text/javascript" src="my-app\src\data.js"></script>
+        <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8">
         <title>Vaccino</title>
       </head>
