--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
   <head>
     <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaccino</title>
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
       <p>Ministry of
-        <br> Health</p> <!--Align left-->
+      <br> Health</p> <!--Align left-->
       <h1>Vaccino</h1> <!--Align center-->
     
       <h3>The official New Zealand Government website<br>
