--- a/src/userHome.html
+++ b/src/userHome.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
+        <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
         <title>Vaccino - Home</title>
       </head>
