--- a/src/admin.html
+++ b/src/admin.html
@@ -8,6 +8,7 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
+        <button>Sign Out</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -17,7 +18,6 @@
         <button type="button" id="adminButton">Resolve Bug Reports</button> <!---->
         <button type="button" id="adminButton">Manage Alert Level</button> <!---->
         <button type="button" id="adminButton">Manage No. of Cases</button> <!---->
-        <button type="button" id="adminButton">Manage Records</button> <!---->
     </div>
   </body>
 
