--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -8,15 +8,35 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
+        <button>Sign Out</button>
+        <button>Home</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div>
-            <button type="button" id="issueQR">Issue QR Code</button> <!---->
-            <button type="button" id="editProfile">Edit</button> <!---->
-            <button type="button" id="approveChanges">Approve Changes</button> <!---->
-            <button type="button" id="deleteUser">Delete User</button> <!---->
+          <l>Please enter user's NHI number: </l>
+          <input placeholder="1122334" ></input> <!---->
+          <button type="button" id="issueQR">Search</button> <!---->
+          <button type="button" id="issueQR">Issue QR Code</button> <!---->
         </div>
+        <div>
+          <p></p> <!--Name of person goes here-->
+          <p></p> <!--NHI number of person goes here-->
+        </div>
+        <div>
+          <p>User QR Code: </p> <!--Has to be across the page-->
+          <p>Address: </p>
+          <p>Date of Birth: </p>
+          <p>Mobile Number: </p>
+          <p>Email: </p>
+          <p>Update Health Documents.</p>
+          <p>Update Vaccination/Test Records.</p>
+        </div>
+        <div>
+          <button type="button" id="editProfile">Edit</button> <!---->
+          <button type="button" id="approveChanges">Approve Changes</button> <!---->
+          <button type="button" id="deleteUser">Delete User</button> <!---->
+      </div>
     </body>
 </html>
