--- a/src/adminrecords.html
+++ b/src/adminrecords.html
@@ -8,6 +8,8 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
+        <button>Sign Out</button>
+        <button>Home</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
@@ -15,8 +17,10 @@
         <div>
             <button type="button" id="changeUpload">Change/Upload Vaccine Records</button> <!---->
             <button type="button" id="viewRecords">View Vaccine Records</button> <!---->
-            <button type="button" id="deleteCertificates">Delete Certificates</button> <!---->
-            <button type="button" id="viewCertificates">View Vaccine Certificates</button> <!---->
+        </div>
+        <div>
+          <button type="button" id="deleteCertificates">Delete Certificates</button> <!---->
+          <button type="button" id="viewCertificates">View Vaccine Certificates</button> <!---->
         </div>
     </body>
 </html>
