--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -8,12 +8,15 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
+        <button>Sign Out</button>
+        <button>Home</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div>
             <button type="button" id="changeAlert">Change Alert Level</button> <!---->
+            <l>Current alert level: </l>
         </div>
     </body>
 </html>
