--- a/src/adminbugreports.html
+++ b/src/adminbugreports.html
@@ -8,12 +8,15 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
+        <button>Sign Out</button>
+        <button>Home</button>
         <h1>Vaccino</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div>
-            <button type="button" id="changeUpload">Resolve</button> <!--This needs to only occur if a user has submitted a bug report.-->
+          <input type="checkbox"></input> <!--JavaScript based-->
+            <button type="button" id="resolveButton">Resolve</button> <!--This needs to only occur if a user has submitted a bug report.-->
         </div>
     </body>
 </html>
