Fixed Sign up form, now writing to file

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <br>
     <button type="button" id="signUpBtn" onclick="window.location.replace('registration.html')">Sign Up</button>
     </div>
+    <h2 id="subtitle">What We Do</h2>
     <div id="box"><!--This goes to the left of the buttons-->
       <ul>
         <li> <!--Goes in a box to the left of the buttons-->
