--- a/src/login.html
+++ b/src/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="login.css">
+      <link rel="stylesheet" href="forms.css">
         <meta charset="UTF-8">
         <title>Vaccino</title>
       </head>
