--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,10 @@
         </li>
       </ul>
     </div>
+    <div class="images">
+      <img id="img1" src=".\images\BabyVaccine.jpg">
+      <img id="img2" src=".\images\ElderlyVaccine.jpg">
+      <img id="img3" src=".\images\Vaccination.jpg">
+    </div>
   </body>
 </html>
