Adding a notepad file

--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -17,7 +17,8 @@
         </div> <!--End of blue header section-->
         <div>
             <button type="button" id="changeAlert">Change Alert Level</button> <!---->
-            <l>Current alert level: </l>
-        </div>
+            <l>Current alert level: </l> <!--Will show the system's current default alert level via image-->
+            <img id="alert1" src=".images\Group339.svg">
+          </div>
     </body>
 </html>
