--- a/src/admincases.html
+++ b/src/admincases.html
@@ -16,11 +16,11 @@
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div>
-          <p>Current number of cases: </p>
+          <p>Current number of cases: </p> <!--Number of cases goes here from system file-->
           <input placeholder="1000"></input>
         </div>
         <div>
-          <button type="button" id="changeCases">Submit</button> <!---->
+          <button type="button" id="changeCases">Submit</button> <!--Needs to link to the system file to change-->
         </div>
     </body>
 </html>
