--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -9,10 +9,16 @@
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
           <p>Ministry of Health</p> <!--Align left-->
-          <h1>Vaccino - report an issue</h1> <!--Align center-->
+          <h1>Vaccino - Report an Issue</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
+
+        <div>
+          <p>Please enter the issue you are having and then submit.</p>
+          <input placeholder="I am having an issue..." ></input>
+          <button>Submit</button>
+        </div> 
     
         </body>
 </html>
