--- a/src/userHome.html
+++ b/src/userHome.html
@@ -14,7 +14,7 @@
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
               <button type="button" id="signOut">Sign out</button> <!--Goes to the far upper right hand side-->
           </div> <!--End of blue header section-->
-          <div class="buttonGroupHome"> <!--Creating a div container to group the buttons that will go to the left of the home screen-->
+          <div class="buttonGroupHome"> <!--Creating a div container to group the buttons that will allow the user to view and change documents.-->
             <button type="button" id="vaccineRecords">View Vaccine Records</button>
             <button type="button" id="testResults">View Test Results</button>
             <button type="button" id="qrCode">QR Code</button>
