--- a/src/admin.html
+++ b/src/admin.html
@@ -14,13 +14,24 @@
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <div>
-        <button type="button" id="adminButton">Manage User Profile</button> <!---->
+        <button type="button" id="adminButton">Manage User Profiles</button> <!---->
         <br>
         <button type="button" id="adminButton">Resolve Bug Reports</button> <!---->
         <br>
-        <button type="button" id="adminButton">Manage Alert Level</button> <!---->
+        <button type="button" id="adminButton">Manage Alert Levels</button> <!---->
         <br>
         <button type="button" id="adminButton">Manage No. of Cases</button> <!---->
+    </div>
+    <div>
+      <table>
+        <tbody>
+          <tr>Your Messages<td>
+          <tr><td>Doctor</td><td>Please remember to test anyone showing symptoms.</td></tr>
+          <tr><td>System Maintenance<td>Site up to date.</td></tr>
+          <tr><td>Boss</td><td>There is a shortage of masks in Tauranga. Please send a box each if you can spare one to the practitioners there.</td></tr>
+          <tr><td>Admin B</td><td>Please check the system for bug reports so that there isn't a backlog.</td></tr>
+      </tbody>
+      </table>
     </div>
   </body>
 
