--- a/src/registration.html
+++ b/src/registration.html
@@ -11,8 +11,7 @@
         </script>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
           <p>Ministry of Health</p> <!--Align left-->
-
-          <h1>Vaccino - sign up</h1> <!--Align center-->
+          <h1>Vaccino - Sign Up</h1> <!--Align center-->
           <h3>The official New Zealand Government website<br>
             for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
@@ -52,7 +51,7 @@
                 </fieldset>
             </form>
             <br><br>
-                <a id="mylink" href="./login.html">login</a>
+                <a id="mylink" href="./login.html">Login</a>
         </div>
         </body>
         <script src="user.js"></script>
