--- a/src/testResults.html
+++ b/src/testResults.html
@@ -8,13 +8,17 @@
       <body>
          <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
             <p>Ministry of Health</p> <!--Align left-->
-            <button type="button" id="signOut">Sign Out</button> <!--Goes to the far upper right hand side-->
+            <br>
+            <button type="button" id="signout">Sign Out</button>
+            <br>        <br>        <br>        <br>        <br>
+            <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
             <h3>The official New Zealand Government website<br>
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
           </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
-          <table>
+          <div id="testtablediv">
+          <table id="testtable">
             <tbody>
               <tr><td>Test</td><td>Date</td><td>Location</td><td>Result</td></tr>
               <tr><td>Covid-19</td><td>22.102021</td><td>Greymouth Medical Center</td><td>Negative</td></tr>
@@ -28,5 +32,6 @@
               <tr><td>Covid-21</td><td>24.102021</td><td>Greymouth Medical Center</td><td>Negative</td></tr>
             </tbody>
           </table>
+        </div>
       </body>
 </html>
