--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -1,21 +1,23 @@
 <!--This will be the Admin Home Page-->
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
+  <!--<link rel="stylesheet" href="index.css">-->
+  <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Manage Alerts</title>
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
-        <button>Sign Out</button>
         <br>
-        <button>Home</button>
-        <h1>Vaccino</h1> <!--Align center-->
+        <button type="button" id="signout">Sign Out</button>
+        <br>        <br>        <br>        <br>        <br>
+        <button type="button" id="homebutton">Home</button>
+        <h1>Vaccino - Alert Levels</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
-        <div>
+        <div id="adminalert">
             <button type="button" id="changeAlert">Change Alert Level</button> <!---->
             <l>Current alert level: </l> <!--Will show the system's current default alert level via image-->
             <img id="alert1" src=".images\Group339.svg">
