--- a/src/admincases.html
+++ b/src/admincases.html
@@ -1,25 +1,24 @@
 <!--This will be the Admin Home Page-->
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Manage Cases</title>
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
-        <button>Sign Out</button>
         <br>
-        <button>Home</button>
-        <h1>Vaccino</h1> <!--Align center-->
+        <button type="button" id="signout">Sign Out</button>
+        <br>        <br>        <br>        <br>        <br>
+        <button type="button" id="homebutton">Home</button>
+        <h1>Vaccino - Cases</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
-        <div>
+        <div id="admincases">
           <p>Current number of cases: </p> <!--Number of cases goes here from system file-->
-          <input placeholder="1000"></input>
-        </div>
-        <div>
+          <input placeholder="1000"></input> <br><br>
           <button type="button" id="changeCases">Submit</button> <!--Needs to link to the system file to change-->
         </div>
     </body>
