--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -1,30 +1,32 @@
 <!--This will be the Admin Home Page-->
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="C:\Users\kyess\OneDrive - UP Education\Documents\testing4\my-app\src\index.css">
+  <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
     <title>Vaccino - Admin Manage Profile</title>
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
-        <button>Sign Out</button>
         <br>
-        <button>Home</button>
-        <h1>Vaccino</h1> <!--Align center-->
+        <button type="button" id="signout">Sign Out</button>
+        <br>        <br>        <br>        <br>        <br>
+        <button type="button" id="homebutton">Home</button>
+        <h1>Vaccino - Admin Manage Profile</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
-        <div>
+        <div id="adminprofile">
           <l>Please enter user's NHI number: </l>
           <input placeholder="1122334" ></input> <!---->
           <button type="button" id="issueQR">Search</button> <!---->
           <button type="button" id="issueQR">Issue QR Code</button> <!---->
-        </div>
-        <div>
-          <p></p> <!--Name of person goes here-->
-          <p></p> <!--NHI number of person goes here-->
-        </div>
+          <br><br>
+        <div id="adminprofile2">
+          <div>
+            <p></p> <!--Name of person goes here-->
+            <p></p> <!--NHI number of person goes here-->
+          </div>
         <div>
           <p>User QR Code: </p> <!--Has to be across the page-->
           <p>Address: </p>
@@ -38,6 +40,8 @@
           <button type="button" id="editProfile">Edit</button> <!---->
           <button type="button" id="approveChanges">Approve Changes</button> <!---->
           <button type="button" id="deleteUser">Delete User</button> <!---->
+        </div>
+      </div>
       </div>
     </body>
 </html>
