Finished styling the forms

--- a/src/login.html
+++ b/src/login.html
@@ -27,9 +27,9 @@
                 <label>Password</label>
                 <input type="password" id = "password" name="password" required>
                 <br><br>
-    
-                <button type ="reset">Reset</button>
-                <button type ="button" id="submit" >Submit</button>
+     
+                <button type ="reset" id="reset">Reset</button>
+                <button type ="button" id="submit">Login</button>
             </fieldset>
             </form>
             <br><br>
