--- a/src/registration.html
+++ b/src/registration.html
@@ -46,7 +46,7 @@
                     <input type ="text" id = 'nhi' name="nhi" placeholder="112233445">
                     <br><br>
 
-                    <button type ="reset">Reset</button>
+                    <button type ="reset" id="reset">Reset</button>
                     <button type ="button" id="submit">Submit</button>
                 </fieldset>
             </form>
