--- a/src/userHome.html
+++ b/src/userHome.html
@@ -17,14 +17,14 @@
               <button type="button" id="signOut">Sign out</button> <!--Goes to the far upper right hand side-->
           </div> <!--End of blue header section-->
           <div class="buttonGroupHome"> <!--Creating a div container to group the buttons that will allow the user to view and change documents.-->
-            <button type="button" id="vaccineRecords">View Vaccine Records</button>
-            <button type="button" id="testResults">View Test Results</button>
-            <button type="button" id="qrCode">QR Code</button>
-            <button type="button" id="details">View/Update Details</button>
+            <button type="button" class="button" id="vaccineRecords">View Vaccine Records</button>
+            <button type="button" class="button" id="testResults">View Test Results</button>
+            <button type="button" class="button" id="qrCode">QR Code</button>
+            <button type="button" class="button" id="details">View/Update Details</button>
           </div><!--End of button group-->
           <div class="rightSide"><!--Grouping all the elements on the right hand side for ease of styling (remember with class it'd be .rightSide h3 for an example of styling the h3 element specifically)-->
             <h3>Current Traffic light level:</h3>
-          <span class="circle"></span><!--I created the circle for the traffic light system in CSS already using this class-->
+          <div class="circle">None</div><!--I created the circle for the traffic light system in CSS already using this class-->
           <p>current number of<br>
             Covid-19 cases: </p><!--We need to figure out how we want to display the numbers in a way that an admin could change them, using JS perhaps?-->
             <p>Found a bug?</p>
