PLACE SOMETHING HERE

--- a/src/bugReport.html
+++ b/src/bugReport.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <meta charset="UTF-8">
-        <title>Vaccino</title>
+        <title>Vaccino - Report Issue</title>
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
