--- a/src/admin.html
+++ b/src/admin.html
@@ -8,7 +8,8 @@
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
-        <button id="signout">Sign Out</button>
+        <br>
+        <button type="button" id="signout">Sign Out</button>
         <h1>Vaccino - Admin Mode</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
