--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -3,7 +3,7 @@
 <html>
   <link rel="stylesheet" href="index.css">
     <meta charset="UTF-8">
-    <title>Vaccino - Admin Manage Profile</title>
+    <title>Vaccino - Manage Profile</title>
   </head>
   <body>
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
@@ -12,7 +12,7 @@
         <button type="button" id="signout">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
         <button type="button" id="homebutton">Home</button>
-        <h1>Vaccino - Admin Manage Profile</h1> <!--Align center-->
+        <h1>Vaccino - Manage Profile</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
