--- a/src/testResults.html
+++ b/src/testResults.html
@@ -12,7 +12,7 @@
             <button type="button" id="signout">Sign Out</button>
             <br>        <br>        <br>        <br>        <br>
             <button type="button" id="homebutton">Home</button>
-            <h1>Vaccino</h1> <!--Align center-->
+            <h1>Vaccino - Test Results</h1> <!--Align center-->
             <h3>The official New Zealand Government website<br>
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
           </div> <!--End of blue header section-->
