--- a/src/registration.html
+++ b/src/registration.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="forms.css">
         <meta charset="UTF-8">
         <title>Vaccino</title>
+        <script src="main.js"></script>
       </head>
       <body>
         <script>
@@ -48,11 +49,13 @@
 
                     <button type ="reset" id="reset">Reset</button>
                     <button type ="button" id="submit">Submit</button>
+                    <p id="code"></p>
                 </fieldset>
             </form>
             <br><br>
                 <a id="mylink" href="./login.html">Login</a>
         </div>
         </body>
-        <script src="user.js"></script>
+        
+        <script src="signUp.js"></script>
 </html>
