--- a/src/userHome.html
+++ b/src/userHome.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
-        <script src="user.js"></script>
         <title>Vaccino - Home</title>
       </head>
       <body>
@@ -15,7 +15,6 @@
             <h1>Vaccino</h1> <!--Align center-->
             <h3>The official New Zealand Government website<br>
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
-              <button type="button" id="signOut">Sign out</button> <!--Goes to the far upper right hand side-->
           </div> <!--End of blue header section-->
           <div class="container">
             <h1>Welcome, </h1>
@@ -38,5 +37,6 @@
             <p id="item3">Found a bug?</p>
             <p id="item4">Report it <a href="bugReport.html">here</a></p><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
           </div>
+          <script src="userPages.js"></script>
       </body>
 </html>
