--- a/src/login.html
+++ b/src/login.html
@@ -4,9 +4,7 @@
       <link rel="stylesheet" href="forms.css">
         <meta charset="UTF-8">
         <title>Vaccino</title>
-      
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-      
       </head>
       <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
@@ -36,6 +34,6 @@
             <a id="mylink" href="./registration.html">Sign Up</a>
         </div>
         <script>window.$ = window.jQuery = require('jquery');</script>
-        <script  src="readData.js"></script>
+        <script  src="login.js"></script>
         </body>
 </html>
