--- a/src/userHome.html
+++ b/src/userHome.html
@@ -16,10 +16,6 @@
             <h3>The official New Zealand Government website<br>
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
           </div> <!--End of blue header section-->
-          <div class="container">
-            <h1>Welcome, </h1>
-            <h1 id="user">User!</h1>
-          </div>
           <div class="buttonGroupHome"> <!--Creating a div container to group the buttons that will allow the user to view and change documents.-->
             <button type="button" class="btn" id="vaccineRecords">View Vaccine Records</button>
             <button type="button" class="btn" id="testResults">View Test Results</button>
@@ -37,6 +33,6 @@
             <p id="item3">Found a bug?</p>
             <p id="item4">Report it <a href="bugReport.html">here</a></p><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
           </div>
-          <script src="userPages.js"></script>
+          <script type="module" src="userPages.js"></script>
       </body>
 </html>
