--- a/src/admineditprofile.html
+++ b/src/admineditprofile.html
@@ -29,7 +29,7 @@
           </div>
         <div>
           <p>User QR Code: </p> <!--Has to be across the page-->
-          <p>Address: </p>
+          <p>Address: </p> <!--Should retrieve user information below from search-->
           <p>Date of Birth: </p>
           <p>Mobile Number: </p>
           <p>Email: </p>
