--- a/src/adminalert.html
+++ b/src/adminalert.html
@@ -20,7 +20,7 @@
         <div id="adminalert">
             <button type="button" id="changeAlert">Change Alert Level</button> <!---->
             <l>Current alert level: </l> <!--Will show the system's current default alert level via image-->
-            <img id="alert1" src=".images\Group339.svg">
+            <img id="alert1" src="images\Group339.svg">
           </div>
     </body>
 </html>
