currently working on the login & user js

--- a/src/login.html
+++ b/src/login.html
@@ -35,5 +35,6 @@
         </div>
         <script>window.$ = window.jQuery = require('jquery');</script>
         <script  src="login.js"></script>
+        <script src="userPages.js"></script>
         </body>
 </html>
