--- a/src/userHome.html
+++ b/src/userHome.html
@@ -5,6 +5,7 @@
         
         <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
+        
         <title>Vaccino - Home</title>
       </head>
       <body>
@@ -33,6 +34,7 @@
             <p id="item3">Found a bug?</p>
             <p id="item4">Report it <a href="bugReport.html">here</a></p><!--If needed, in order to style all of these p elements I can give them and id for you to easily call.-->
           </div>
-          <script type="module" src="userPages.js"></script>
+          <script src="userPages.js"></script>
+        <script src="login.js"></script>
       </body>
 </html>
