Added exit button, removed title bar

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="index.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
     <meta charset="UTF-8">
+    <script src="preload.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaccino</title>
   </head>
@@ -25,6 +26,8 @@
     <button type="button" id="loginBtn" onclick="window.location.replace('login.html')">Log In</button>
     <br>
     <button type="button" id="signUpBtn" onclick="window.location.replace('registration.html')">Sign Up</button>
+    <br>
+    <button type="button" id="exit">Exit</button>
     </div>
     <div id="box"><!--This goes to the left of the buttons-->
       <h2 id="subtitle">What We Do</h2>
