--- a/src/userQrCode.html
+++ b/src/userQrCode.html
@@ -9,12 +9,12 @@
     <body>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
             <p>Ministry of Health</p> <!--Align left-->
-            <br>
             <button type="button" id="signout">Sign Out</button>
+            <button type="button" id="homebutton">Home</button>
             <h1>Vaccino</h1> <!--Align center-->
             <h3>The official New Zealand Government website<br>
               for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
-        </div> <!--End of blue header section-->
+          </div> <!--End of blue header section-->
     </body>
 </html>
     
