--- a/src/vaccineRecords.html
+++ b/src/vaccineRecords.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="userPages.css">
         <meta charset="UTF-8">
           <!-- https://sheetjs.com/ -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
@@ -9,18 +9,14 @@
         <input type="file" id="demoA" accept=".xls,.xlsx"/>
       </head>
       <body>
-         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
-            <p>Ministry of Health</p> <!--Align left-->
-            <br>
-            <button type="button" id="signout">Sign Out</button>
-            <br>        <br>        <br>        <br>        <br>
-            <button type="button" id="homebutton">Home</button>
-            <h1>Vaccino - Vaccines</h1> <!--Align center-->
-            <h3>The official New Zealand Government website<br>
-              for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
-              <button type="button" id="signOut">Sign out</button> <!--Goes to the far upper right hand side-->
-              <button type="button" id="home">Home</button>
-          </div> <!--End of blue header section-->
+        <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
+          <p>Ministry of Health</p> <!--Align left-->
+          <button type="button" id="signout">Sign Out</button>
+          <button type="button" id="homebutton">Home</button>
+          <h1>Vaccino</h1> <!--Align center-->
+          <h3>The official New Zealand Government website<br>
+            for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
+        </div> <!--End of blue header section-->
           <!--need to sort out the table here-->
           
       </body>
