started work on vax records and tests js

--- a/src/registration.html
+++ b/src/registration.html
@@ -7,9 +7,6 @@
         <script src="main.js"></script>
       </head>
       <body>
-        <script>
-            const electron = require("electron")
-        </script>
         <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
           <p>Ministry of Health</p> <!--Align left-->
           <h1>Vaccino - Sign Up</h1> <!--Align center-->
@@ -48,7 +45,7 @@
                     <br><br>
 
                     <button type ="reset" id="reset">Reset</button>
-                    <button type ="button" id="submit">Submit</button>
+                    <button type ="button" class="sub" id="submit">Submit</button>
                     <p id="code"></p>
                 </fieldset>
             </form>
