--- a/src/admin.html
+++ b/src/admin.html
@@ -9,20 +9,20 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout">Sign Out</button>
+        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
         <h1>Vaccino - Admin Mode</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
     </div> <!--End of blue header section-->
     <div id="adminhomedisplay">
     <div id="adminhomebuttons">
-        <button type="button" class="adminButton">Manage User Profiles</button> <!---->
+        <button type="button" class="adminButton" onclick="window.location.replace('admineditprofile.html')">Manage User Profiles</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton">Resolve Bug Reports</button> <!---->
+        <button type="button" class="adminButton" onclick="window.location.replace('adminbugreports.html')">Resolve Bug Reports</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton">Manage Alert Levels</button> <!---->
+        <button type="button" class="adminButton" onclick="window.location.replace('adminalert.html')">Manage Alert Levels</button> <!---->
         <br>        <br>
-        <button type="button" class="adminButton">Manage No. of Cases</button> <!---->
+        <button type="button" class="adminButton" onclick="window.location.replace('admincases.html')">Manage No. of Cases</button> <!---->
       </div>
         <div id="adminhomemessages">
         <table id="adminmessagestable">
