--- a/src/admincases.html
+++ b/src/admincases.html
@@ -9,17 +9,41 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout">Sign Out</button>
+        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
         <br>        <br>        <br>        <br>        <br>
-        <button type="button" id="homebutton">Home</button>
+        <button type="button" id="homebutton" onclick="window.location.replace('admin.html')">Home</button>
         <h1>Vaccino - Cases</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
         </div> <!--End of blue header section-->
         <div id="admincases">
           <p>Current number of cases: </p> <!--Number of cases goes here from system file-->
-          <input placeholder="1000"></input> <br><br>
+          <div id="CurrentCases"></div>
+          <script>
+            fetch('covidnodata.json')
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function (data) {
+                    appendData(data);
+                })
+                .catch(function (err) {
+                    console.log('error: ' + err);
+                });
+            function appendData(data) {
+                var mainContainer = document.getElementById("CurrentCases");
+                for (var i = 0; i < data.length; i++) {
+                    var div = document.createElement("div");
+                    div.innerHTML = data[i].covidNo;
+                    mainContainer.appendChild(div);
+                }
+            }
+        </script>
+        <br>
+          <input placeholder="1000" required></input> <br><br>
           <button type="button" id="changeCases">Submit</button> <!--Needs to link to the system file to change-->
         </div>
     </body>
+
+    <script src="admincases.js"></script>
 </html>
