--- a/src/admin.html
+++ b/src/admin.html
@@ -9,7 +9,7 @@
     <div class="Header"> <!--This is the blue header section with the Vaccino title and text about the government-->
         <p>Ministry of Health</p> <!--Align left-->
         <br>
-        <button type="button" id="signout" onclick="window.location.replace('index.html')">Sign Out</button>
+        <button type="button" id="signout">Sign Out</button>
         <h1>Vaccino - Admin Mode</h1> <!--Align center-->
         <h3>The official New Zealand Government website<br>
           for vaccine and innoculation information</h3> <!--Align Under Vaccino-->
